# azure-bfl-comparison

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: GPT_IMAGE_INTEGRATION.md  ORIENTATION_DETECTION_USAGE.md  ORIENTATION_FIX_SUMMARY.md  PROMPT_SIMPLIFICATION_SUMMARY.md  flux_prompt_template.md  orientation_preservation_solutions.md
examples/: background_batch.csv  background_batch.json  cloth_batch.csv  cloth_swap_batch.json  id_portrait.json  image_modification.csv  image_modification_batch.json  img2img_batch.csv  img2img_batch.json  matrix-safe-images  matrix_batch.json  outfit_single.json  outfit_swap_batch.csv  outfit_swap_batch.json  outfit_swap_batch_from_csv.json  outfit_swap_mask_sample.json  outfit_swap_try_on.json  outfit_swap_with_masks.json  single_image_batch.json  single_image_modification.json  single_image_modification.json.json
scripts/: flux_outfit_swap.py  outfit_swap_with_mask.py  run_batch.py  run_flux_outfit_swap_batch.py  run_outfit_swap_with_masks.py  test_orientation_detection.py
src/azure_bfl_compare/: __init__.py  config.py  types.py
src/azure_bfl_compare/clients/: __init__.py  azure_flux.py  azure_gpt_image.py  bfl_flux.py
src/azure_bfl_compare/tasks/: __init__.py  batch_runner.py  outfit_adapter.py  outfit_transfer.py  prompt_plan.py
